--- a/gb/19/8/9/n11442336.md
+++ b/gb/19/8/9/n11442336.md
@@ -1,51 +1,58 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/1.jpg" title="´ó¼ÍÔª"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/3.jpg" title="¹ú¼ÊÐÂÎÅ"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/4.jpg" title="´óÂ½ÐÂÎÅ"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/5.jpg" title="ÆÀÂÛ"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/6.jpg" title="ÎÄ»¯"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/7.jpg" title="Éú»î"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/8.jpg" title="ÓéÀÖ"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/9.jpg" title="½¡¿µ"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/10.jpg" title="¹ºÎï"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/12.jpg" title="¾è¿î"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://git.io/fjCRf">ÉçÂÛ</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5657.md#1">ÈýÍË</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf6123.md#1">Ëß½­</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1176117.md#1">ÖÐ¹²Âô¹ú</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5773.md#1">Ì°¸¯ÒùÂÒ | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1176115.md#1">´Ü¸ÄÀúÊ·</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1176107.md#1">µ³¿ý»­Æ¤</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1320400.md#1">ÖÐ¹²¼äµý</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1176114.md#1">ÆÆ»µ´«Í³</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5287.md#1">¶ñ¹áÂúÓ¯</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/ncid278.md#1">ÈËÈ¨</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1176111.md#1">ÆÈº¦</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1235328.md#1">Êé¼®</a> | <a target="_blank" href="https://github.com/liczai2340/fq/blob/master/README.md?zsrh#1">·­Ç½</a></p><p><a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5562.md#1">Î±»ð</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf4378.md#1">ÎÊ´ð</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5792.md#1">ÆÊÎö</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5735.md#1">Á½°¶±È¶Ô</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf6119.md#1">¸÷¹ú°ý½±</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf6120.md#1">ÃñÖÚÉùÔ®</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1188594.md#1">ÄÑÍü¼ÇÒä</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf3180.md#1">º£Íâºë´«</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5410.md#1">ÍòÈËÉÏ·Ã</a> | <a target="_blank" href="https://github.com/liczai2340/ntdtv/blob/master/gb/prog1530_1.md#1">ºÍÆ½¿¹Òé</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf4386.md#1">Ö§³Ö</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf4389.md#1">ÕæÏà</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5790.md#1">Ê¥Ôµ</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf4786.md#1">ÉñÔÏ</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>¸ú½ø°ÂË¹¿¨£¡2019°¬ÃÀ½±Ö÷³ÖÈË´ÓÈ±</h2>
-<img src="http://i.epochtimes.com/assets/uploads/2019/08/1908090700551487-600x400.jpg" />
-<h6>2019 µÚ71½ì°¬ÃÀ½±£¨Emmy Awards£©°ä½±µäÀñ¼´½«ÓÚ 9ÔÂ22ÈÕÃÀ¹úÎ÷°¶Ê±¼äÍí¼äÎåµãÓÚÂåÉ¼í¶µÇ³¡¡£(Kevin Winter/Getty Images)
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/yxhgbq3433/www/master/t/djy/1.jpg" title="å¤§çºªå…ƒé¦–é¡µ" alt="å¤§çºªå…ƒé¦–é¡µ"></a><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/yxhgbq3433/www/master/t/djy/3.jpg" title="å›½é™…æ–°é—»" alt="å›½é™…æ–°é—»"></a><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/yxhgbq3433/www/master/t/djy/4.jpg" title="å¤§é™†æ–°é—»" alt="å¤§é™†æ–°é—»"></a><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/yxhgbq3433/www/master/t/djy/5.jpg" title="å¤§çºªå…ƒè¯„è®º" alt="å¤§çºªå…ƒè¯„è®º"></a><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/yxhgbq3433/www/master/t/djy/6.jpg" title="ä¼ ç»Ÿæ–‡åŒ–" alt="ä¼ ç»Ÿæ–‡åŒ–"></a><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/yxhgbq3433/www/master/t/djy/7.jpg" title="ç”Ÿæ´»æ¶ˆè´¹" alt="ç”Ÿæ´»æ¶ˆè´¹"></a><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/yxhgbq3433/www/master/t/djy/8.jpg" title="å¨±ä¹ä¼‘é—²" alt="å¨±ä¹ä¼‘é—²"></a><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/yxhgbq3433/www/master/t/djy/9.jpg" title="å¥åº·" alt="å¥åº·"></a><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/yxhgbq3433/www/master/t/djy/10a.jpg" title="ç‹¬å®¶" alt="ç‹¬å®¶"></a><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/yxhgbq3433/www/master/t/djy/12a.jpg" title="å¤´æ¡è¦é—»" alt="å¤´æ¡è¦é—»"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/yxhgbq3433/www/blob/master/README.md?zsrh#1">ç¿»å¢™</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf5657.md#1">ä¸‰é€€</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf6124.md#1">è¯‰æ±Ÿ</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf1176117.md#1">ä¸­å…±å–å›½</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf5773.md#1">è´ªè…æ·«ä¹±</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf1176115.md#1">çªœæ”¹åŽ†å²</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf1176107.md#1">å…šé­ç”»çš®</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf1320400.md#1">ä¸­å…±é—´è°</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf1176114.md#1">ç ´åä¼ ç»Ÿ</a> | <a target="_blank" href="https://github.com/yxhgbq3433/ntdtv/blob/master/gb/prog447_1.md#1">æ¶è´¯æ»¡ç›ˆ</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/ncid278.md#1">äººæƒ</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf1176111.md#1">è¿«å®³</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">æœŸåˆŠ</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf5562.md#1">ä¼ªç«</a></p><p><a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/9p.md#1">ç¤¾è®º</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf4378.md#1">é—®ç­”</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf5792.md#1">å‰–æž</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf5735.md#1">ä¸¤å²¸æ¯”å¯¹</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf6119.md#1">å„å›½è¤’å¥–</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf6120.md#1">æ°‘ä¼—å£°æ´</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf1188594.md#1">éš¾å¿˜è®°å¿†</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf3180.md#1">æµ·å¤–å¼˜ä¼ </a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf5410.md#1">ä¸‡äººä¸Šè®¿</a> | <a target="_blank" href="https://github.com/yxhgbq3433/www/blob/master/README.md?zsrh#1">å¹³å°é¦–é¡µ</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf4386.md#1">æ”¯æŒ</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf4389.md#1">çœŸç›¸</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf5790.md#1">åœ£ç¼˜</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf4786.md#1">ç¥žéŸµ</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>è·Ÿè¿›å¥¥æ–¯å¡ï¼2019è‰¾ç¾Žå¥–ä¸»æŒäººä»Žç¼º</h2>
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2019/08/1908090700551487-600x400.jpg" />
+<h6>2019 ç¬¬71å±Šè‰¾ç¾Žå¥–ï¼ˆEmmy Awardsï¼‰é¢å¥–å…¸ç¤¼å³å°†äºŽ 9æœˆ22æ—¥ç¾Žå›½è¥¿å²¸æ—¶é—´æ™šé—´äº”ç‚¹äºŽæ´›æ‰çŸ¶ç™»åœºã€‚(Kevin Winter/Getty Images)
 </h6>
 <hr>
-<p>¡¾´ó¼ÍÔª2019Äê08ÔÂ09ÈÕÑ¶¡¿£¨´ó¼ÍÔª¼ÇÕßÂíÎ¬·Ò×ÛºÏ±¨µ¼£©2019 µÚ71½ì<a href="https://github.com/liczai2340/djy/blob/master/gb/tag/%E8%89%BE%E7%BE%8E%E5%A5%96.md">°¬ÃÀ½±</a>£¨<em>Emmy Awards</em>£©°ä½±µäÀñ½«ÓÚ9ÔÂ22ÈÕÃÀ¹úÎ÷°¶Ê±¼äÍí¼ä5µãÔÚÂåÉ¼í¶µÇ³¡£¬Ö÷°ì·½<a href="https://github.com/liczai2340/djy/blob/master/gb/tag/%E7%A6%8F%E6%96%AF.md">¸£Ë¹</a>£¨<em>FOX</em>£©¹«Ë¾ÈÕÇ°Ðû²¼£¬½ñÄê9ÔÂµÄ<a href="https://github.com/liczai2340/djy/blob/master/gb/tag/%E8%89%BE%E7%BE%8E%E5%A5%96.md">°¬ÃÀ½±</a>½«Ð§·Â91½ì<a href="https://github.com/liczai2340/djy/blob/master/gb/tag/%E5%A5%A5%E6%96%AF%E5%8D%A1.md">°ÂË¹¿¨</a>£¬²»¿¼ÂÇÕÒÖ÷³ÖÈË¡£</p>
-<p><a href="https://github.com/liczai2340/djy/blob/master/gb/tag/%E7%A6%8F%E6%96%AF.md">¸£Ë¹</a>ÓéÀÖ²¿ÃÅÖ´ÐÐ³¤¿ÂÀï¶û£¨<em>Charlie Collier</em>£©ÈÕÇ°ÓÚTCAÏÄ¼¾Ã½Ìå¼ûÃæ»áÉÏ¹«¿ªÉùÃ÷£º¡°½ñÄêµÄ°¬ÃÀ½±²»»áÓÐÖ÷³ÖÈË£¬ºÜÈÙÐÒ½ñÄêÄÜ×ª²¥´ËµäÀñ£¬ÎÒÃÇµÄÈÎÎñÊÇ±íÕÃ½ñÄêµÄ½ÚÄ¿¡£¡±</p>
-<p>¿ÂÀï¶û²¢ÇÒ±íÊ¾£¬Èç¹ûÓÐÖ÷³ÖÈË£¬¿ª³¡¾Í»¨15µ½20·ÖÖÓ£¬ÕâÑù¾ÍÎÞ·¨±íÕÃÕâÐ©½ÚÄ¿¡£Òò´ËµäÀñµÄÖÆ×÷ÍÅ¶Ó±ØÐë´ÓÖÐ×ö³öÈ¡Éá¡£ËùÒÔ½ñÄê½«²»»áÓÐÖ÷³ÖÈË¡£</p>
-<p>ÖÐÑëÉç±¨µ¼£¬±¾½ìÓÐ¶à²¿ÈÈÃÅµÃ½±Ó°¼¯ÔÚ½ñÄê»®ÏÂ¾äµã£¬ÏñÊÇ¡¶±ùÓë»ðÖ®¸è£ºÈ¨Á¦ÓÎÏ·¡·£¨<em>Game of Thrones</em>£©¡¢ÕþÖÎÏ²¾ç¡¶¸±ÈËÖ®ÈÊ¡·£¨<em>Veep</em>£©ÓëÇé¾³Ï²¾ç¡¶Õ¬ÄÐÐÐ²»ÐÐ¡·£¨<em>The Big Bang Theory</em>£©µÈ¡£</p>
-<p>¾¡¹ÜÉÙÁËÖ÷³ÖÈË£¬¿ÂÀï¶ûÇ¿µ÷½ñÄê°¬ÃÀ½±ÈÔ»áÓÐÓàÐË½ÚÄ¿ºÍ¿ª³¡±íÑÝ£¬²¢Í¸Â¶µäÀñ¡°Ò²»áÓÐ¾ªÏ²¡±¡£</p>
-<p>½ñÄê2ÔÂËù¾Ù°ìµÄµÚ91½ì<a href="https://github.com/liczai2340/djy/blob/master/gb/tag/%E5%A5%A5%E6%96%AF%E5%8D%A1.md">°ÂË¹¿¨</a>½ðÏñ½±£¬Ô­ÏÈÑûÇëÏ²¾çÃ÷ÐÇ¿­ÎÄ?¹þÌØ£¨<em>Kevin Hart</em>£©µ£ÈÎµäÀñÖ÷³ÖÈË£¬µ«Òò¹ýÈ¥Ð´¹ý·´Í¬µÄÍÆÎÄÒýÆðÕùÒé£¬¹þÌØ¾ö¶¨½»³öÖ÷³Ö°ô£¬µ¼ÖÂÕâ³¡Ó°Ì³×î¸ßÈÙÓþµÄÊ¢»á£¬³öÏÖÓÐÊ·ÒÔÀ´µÚ2´ÎÖ÷³ÖÈË´ÓÈ±µÄÇé¿ö¡£</p>
-<p>µÚ71½ì°¬ÃÀ½±°ä½±µäÀñ½«ÓÚÃÀ¹úÊ±¼ä9ÔÂ22ÈÕÍí¼ä¾ÙÐÐ£¨Ì¨ÍåÊ±¼ä9ÔÂ23ÈÕÖÜÒ»ÔçÉÏ8µã£©¡£</p>
-<p>ÔðÈÎ±à¼­£ºËÕÑú</p>
+	<p>ã€å¤§çºªå…ƒ2019å¹´08æœˆ09æ—¥è®¯ã€‘ï¼ˆå¤§çºªå…ƒè®°è€…é©¬ç»´èŠ¬ç»¼åˆæŠ¥å¯¼ï¼‰2019 ç¬¬71å±Š<ahref="https://github.com/yxhgbq3433/djy/blob/master/gb/tag/%E8%89%BE%E7%BE%8E%E5%A5%96.md#1">è‰¾ç¾Žå¥–</a>ï¼ˆ<em>Emmy Awards</em>ï¼‰é¢å¥–å…¸ç¤¼å°†äºŽ9æœˆ22æ—¥ç¾Žå›½è¥¿å²¸æ—¶é—´æ™šé—´5ç‚¹åœ¨æ´›æ‰çŸ¶ç™»åœºï¼Œä¸»åŠžæ–¹<ahref="https://github.com/yxhgbq3433/djy/blob/master/gb/tag/%E7%A6%8F%E6%96%AF.md#1">ç¦æ–¯</a>ï¼ˆ<em>FOX</em>ï¼‰å…¬å¸æ—¥å‰å®£å¸ƒï¼Œä»Šå¹´9æœˆçš„<ahref="https://github.com/yxhgbq3433/djy/blob/master/gb/tag/%E8%89%BE%E7%BE%8E%E5%A5%96.md#1">è‰¾ç¾Žå¥–</a>å°†æ•ˆä»¿91å±Š<ahref="https://github.com/yxhgbq3433/djy/blob/master/gb/tag/%E5%A5%A5%E6%96%AF%E5%8D%A1.md#1">å¥¥æ–¯å¡</a>ï¼Œä¸è€ƒè™‘æ‰¾ä¸»æŒäººã€‚</p>
+<p><ahref="https://github.com/yxhgbq3433/djy/blob/master/gb/tag/%E7%A6%8F%E6%96%AF.md#1">ç¦æ–¯</a>å¨±ä¹éƒ¨é—¨æ‰§è¡Œé•¿æŸ¯é‡Œå°”ï¼ˆ<em>Charlie Collier</em>ï¼‰æ—¥å‰äºŽTCAå¤å­£åª’ä½“è§é¢ä¼šä¸Šå…¬å¼€å£°æ˜Žï¼šâ€œä»Šå¹´çš„è‰¾ç¾Žå¥–ä¸ä¼šæœ‰ä¸»æŒäººï¼Œå¾ˆè£å¹¸ä»Šå¹´èƒ½è½¬æ’­æ­¤å…¸ç¤¼ï¼Œæˆ‘ä»¬çš„ä»»åŠ¡æ˜¯è¡¨å½°ä»Šå¹´çš„èŠ‚ç›®ã€‚â€</p>
+<p>æŸ¯é‡Œå°”å¹¶ä¸”è¡¨ç¤ºï¼Œå¦‚æžœæœ‰ä¸»æŒäººï¼Œå¼€åœºå°±èŠ±15åˆ°20åˆ†é’Ÿï¼Œè¿™æ ·å°±æ— æ³•è¡¨å½°è¿™äº›èŠ‚ç›®ã€‚å› æ­¤å…¸ç¤¼çš„åˆ¶ä½œå›¢é˜Ÿå¿…é¡»ä»Žä¸­åšå‡ºå–èˆã€‚æ‰€ä»¥ä»Šå¹´å°†ä¸ä¼šæœ‰ä¸»æŒäººã€‚</p>
+<p>ä¸­å¤®ç¤¾æŠ¥å¯¼ï¼Œæœ¬å±Šæœ‰å¤šéƒ¨çƒ­é—¨å¾—å¥–å½±é›†åœ¨ä»Šå¹´åˆ’ä¸‹å¥ç‚¹ï¼Œåƒæ˜¯ã€Šå†°ä¸Žç«ä¹‹æ­Œï¼šæƒåŠ›æ¸¸æˆã€‹ï¼ˆ<em>Game of Thrones</em>ï¼‰ã€æ”¿æ²»å–œå‰§ã€Šå‰¯äººä¹‹ä»ã€‹ï¼ˆ<em>Veep</em>ï¼‰ä¸Žæƒ…å¢ƒå–œå‰§ã€Šå®…ç”·è¡Œä¸è¡Œã€‹ï¼ˆ<em>The Big Bang Theory</em>ï¼‰ç­‰ã€‚</p>
+<p>å°½ç®¡å°‘äº†ä¸»æŒäººï¼ŒæŸ¯é‡Œå°”å¼ºè°ƒä»Šå¹´è‰¾ç¾Žå¥–ä»ä¼šæœ‰ä½™å…´èŠ‚ç›®å’Œå¼€åœºè¡¨æ¼”ï¼Œå¹¶é€éœ²å…¸ç¤¼â€œä¹Ÿä¼šæœ‰æƒŠå–œâ€ã€‚</p>
+<p>ä»Šå¹´2æœˆæ‰€ä¸¾åŠžçš„ç¬¬91å±Š<ahref="https://github.com/yxhgbq3433/djy/blob/master/gb/tag/%E5%A5%A5%E6%96%AF%E5%8D%A1.md#1">å¥¥æ–¯å¡</a>é‡‘åƒå¥–ï¼ŒåŽŸå…ˆé‚€è¯·å–œå‰§æ˜Žæ˜Ÿå‡¯æ–‡?å“ˆç‰¹ï¼ˆ<em>Kevin Hart</em>ï¼‰æ‹…ä»»å…¸ç¤¼ä¸»æŒäººï¼Œä½†å› è¿‡åŽ»å†™è¿‡ååŒçš„æŽ¨æ–‡å¼•èµ·äº‰è®®ï¼Œå“ˆç‰¹å†³å®šäº¤å‡ºä¸»æŒæ£’ï¼Œå¯¼è‡´è¿™åœºå½±å›æœ€é«˜è£èª‰çš„ç››ä¼šï¼Œå‡ºçŽ°æœ‰å²ä»¥æ¥ç¬¬2æ¬¡ä¸»æŒäººä»Žç¼ºçš„æƒ…å†µã€‚</p>
+<p>ç¬¬71å±Šè‰¾ç¾Žå¥–é¢å¥–å…¸ç¤¼å°†äºŽç¾Žå›½æ—¶é—´9æœˆ22æ—¥æ™šé—´ä¸¾è¡Œï¼ˆå°æ¹¾æ—¶é—´9æœˆ23æ—¥å‘¨ä¸€æ—©ä¸Š8ç‚¹ï¼‰ã€‚</p>
+<p>è´£ä»»ç¼–è¾‘ï¼šè‹æ¼¾</p>
+	
 <hr>
 
-#### ±¾ÎÄ×ª×Ô<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>£¨¹úÄÚÐèÓÃ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>²ÅÄÜ·ÃÎÊ£©
-> Ô­ÎÄ£º<a href="http://www.epochtimes.com/gb/19/8/9/n11442336.htm">¸ú½ø°ÂË¹¿¨£¡2019°¬ÃÀ½±Ö÷³ÖÈË´ÓÈ±</a>
-#### ÏÂÔØ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>Ïà¹ØÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/7/17/n11391137.htm">°¬ÃÀ½±ÌáÃû¹«²¼ ¡¶ÇÐ¶ûÅµ±´Àû¡·ÈëÎ§19Ïî</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/24/n11276780.htm">Ôø»ñ69Ïî°¬ÃÀ½±ÌáÃû ¡¶ÌÆ¶Ù×¯Ô°¡·½ñµÇ´óÒøÄ»</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/6/n11236350.htm">ÉñÔÏºÃÀ³Îë4³¡È«±¬Âú 9´Î°¬ÃÀ½±µÃÖ÷Ê¢ÔÞ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/4/14/n11185650.htm">ÂåÉ¼í¶Ò»Æ±ÄÑÇó ½ðÇò½±°¬ÃÀ½±µÃÖ÷ÆëÔÞÉñÔÏ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/2/21/n11059843.htm">±©·çÑ©ÄÑ×è·Ñ³ÇÉñÔÏÃÔ °¬ÃÀ½±µÃÖ÷Ê¢ÔÞÍêÃÀ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/1/11/n10967447.htm">ËÄ¶È×·¿´ÉñÔÏ Èý´Î°¬ÃÀ½±µÃÖ÷¡°¸ÐÅåÖÁÉî¡±</a></li>
 
-#### ÏÂÔØ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>ÈÈÃÅÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/8/8/n11440777.htm">ÃÀ¹úÎñÔºÇ´ÔðÖÐ¹²ÊÇ¡°Á÷Ã¥ÕþÈ¨¡±</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/8/n11440391.htm">¡¾ÐÂÎÅ¿´µã¡¿»ªÎªµÈ5¹«Ë¾Ôâ½û ÃÀ7Ìì3ÖØÈ­</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/8/n11440874.htm">ÖÐ¹ú´óÂèÅ­³â¸Û¾¯£º½«±»¹²²úµ³Ð¶Ä¥É±Â¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/8/n11440390.htm">¡¾ÐÂÎÅ¿´µã¡¿³ö±øÏã¸Û£¿±±¾©½«¸¶¾Þ´ó´ú¼Û</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/29/n11416959.htm">Ç§Äê·çËª²»ÄÜÇÖÊ´£ºÇØÊ¼»ÊÁêÖ®ÃÕ£¨ÏÂ£©</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/29/n11417531.htm">ÊÀ¼äµÄÏàÓö ¶àÊÇ¾Ã±ðºóµÄÖØ·ê</a></li>
-> <li><a href="http://www.epochtimes.com/gb/16/5/29/n7942300.htm">¡¾ÎÄÊ·¡¿Ã÷³É×æÎå´ÎÇ×Õ÷Ä®±± Îä¹¦ºÕºÕ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/31/n11421266.htm">Ò»´úÕþÖÎÁìÐä½¯¾­¹úÓëËû¼áÊØµÄÐÅÄî</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/7/n11436180.htm">Ó²±ÒÀ´È¥ÎÞ×Ù Ì¨Ä§ÊõÊ¦Õðº³¡¶ÃÀ¹ú´ïÈËÐã¡·</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/7/n11438018.htm">ÖÐ¹²½ûÂ½Æ¬½ÇÖð½ðÂí Ò¶µÂæµÀÖ¹Û¡°¸÷ÐÐ¸÷Â·¡±</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/6/n11435504.htm">¸Û¾¯Ö¸¹ÛÐÇ±Ê¾ß¹¥»÷ÐÔ ÍõÏ²£ºÂòÌÙÌõµÄÔõ²»×¥</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/7/n11437780.htm">Â½Æ¬¾ºÖð½ðÂí½±Ôâ½û µ¼ÑÝÕÅÔÞ²¨³âµçÓ°¾Ö¿É³Ü</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/8/n11440819.htm">ºÃÓÑÅíºÆÏè×ªÇ×¹²Ìû ¶ÅãëÔó£º½ñÌìÎÒ×îÉúÆø</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/8/n11438528.htm">¡¾ÅÄ°¸¾ªÆæ¡¿ÀîÐ¡ÁúBe waterÆô·¢·´ËÍÖÐÔË¶¯</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/8/n11438782.htm">¡¾ÊÀ½çÊ®×ÖÂ·¿Ú¡¿ÖÐÃÀ»õ±ÒÕ½ ¼ÓËÙ×Ê½ð´óÌÓÍö£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/8/n11440390.htm">¡¾ÐÂÎÅ¿´µã¡¿³ö±øÏã¸Û£¿±±¾©½«¸¶¾Þ´ó´ú¼Û</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/7/n11436991.htm">ÍâÃ½£ºÈô¾ü¶ÓÈë¸Û ¿ÖÏÖÈý¸öÔÖÄÑÐÔºó¹û</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/6/n11435757.htm">²ÎÒéÔ±£ºÈôÖÐ¹²¶ÔÏã¸Û½äÑÏ ÃÀÓ¦Áù·½ÃæÖÆ²Ã</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/7/n11437764.htm">Ã³Ò×Õ½Éý¼¶ ÉñÃØÂò¼Ò¹ºÂò´óÅúÃÀ¹ú´ó¶¹</a></li>
+<strong>ç›¸å…³æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/19/1/11/n10967447.md#1">å››åº¦è¿½çœ‹ç¥žéŸµ ä¸‰æ¬¡è‰¾ç¾Žå¥–å¾—ä¸»â€œæ„Ÿä½©è‡³æ·±â€</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/19/2/21/n11059843.md#1">æš´é£Žé›ªéš¾é˜»è´¹åŸŽç¥žéŸµè¿· è‰¾ç¾Žå¥–å¾—ä¸»ç››èµžå®Œç¾Ž</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/19/4/14/n11185650.md#1">æ´›æ‰çŸ¶ä¸€ç¥¨éš¾æ±‚ é‡‘çƒå¥–è‰¾ç¾Žå¥–å¾—ä¸»é½èµžç¥žéŸµ</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/19/5/6/n11236350.md#1">ç¥žéŸµå¥½èŽ±åž4åœºå…¨çˆ†æ»¡ 9æ¬¡è‰¾ç¾Žå¥–å¾—ä¸»ç››èµž</a></li>
 <hr>
 
-#### ÊÖ»úÉÏ³¤°´²¢¸´ÖÆÏÂÃæ¶þÎ¬Âë·ÖÏí±¾ÎÄÕÂ£º<br><br><img src="http://www.hehaibao.com/qr/index.php?m=1&e=L&p=10&t=&d=https://github.com/liczai2340/djy/blob/master/gb/19/8/9/n11442336.md%231" title="·ÖÏí±¾ÎÄÕÂ"></td><td VALIGN=TOP><a href="https://github.com/liczai2340/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/wei-f1.jpg" title="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"  alt="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"></a><br><a href="https://github.com/liczai2340/yh/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/yong-h.jpg" title="ÓÀºãµÄ¼ûÖ¤"  alt="ÓÀºãµÄ¼ûÖ¤"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/shang-lnz.jpg" title="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"  alt="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/huo-z3.jpg" title="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"  alt="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/huo-z4.jpg" title="Ö¤ÈËÃèÊö»îÕª¿Ö²À"  alt="Ö¤ÈËÃèÊö»îÕª¿Ö²À"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/huo-z1.jpg" title="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"  alt="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/ma-ks.jpg" title="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"  alt="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/chang-zs.jpg" title="²Ø×ÖÊ¯ ÔÌÌì»ú"  alt="²Ø×ÖÊ¯ ÔÌÌì»ú"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/st1.jpg" title="¹Ø×¢3ÒÚÈËÈýÍË"  alt="¹Ø×¢3ÒÚÈËÈýÍË"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/jie-t.jpg" title="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"  alt="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/gao-zs.jpg" title="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"  alt="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/sj1.jpg" title="303ÍòÈË¾Ù±¨½­ÔóÃñ"  alt="303ÍòÈË¾Ù±¨½­ÔóÃñ"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/sj2.jpg" title="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"  alt="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/liangan.jpg" title="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"  alt="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/jia-ndzl.jpg" title="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"  alt="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/xiao-wd.jpg" title="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"  alt="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/yindu.jpg" title="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"  alt="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/xie-j.jpg" title="²»Ò»ÑùµÄº£ÍâÐ£Ô°"  alt="²»Ò»ÑùµÄº£ÍâÐ£Ô°"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/li-up.jpg" title="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"  alt="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/zfl2.jpg" title="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"  alt="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/zhen-h.jpg" title="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"  alt="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/dalu-sk.jpg" title="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"  alt="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/zfl1.jpg" title="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"  alt="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"></a><br><a href="https://github.com/liczai2340/fq/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/fq1.jpg" title="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"  alt="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"></a><br></td></tr></table>
+
+<strong>ç¼–è¾‘æŽ¨èï¼š</strong>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/21/n10798292.md#1" target="_blank">å…±äº§æš´æ”¿å½•ï¼šäº”åå¹´ä»£çš„è‚ƒåè¿åŠ¨</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/14/n11521196.md#1" target="_blank">ç¾Žé‡é‡çº§å‚è®®å‘˜ è¦æ±‚ä¸­å…±åœæ­¢è¿«å®³æ³•è½®åŠŸ</a></li>
+<hr>
+
+<strong>çƒ­é—¨æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/1/26/n12711986.md#1">é¢„è¨€è¯•æžï¼šå…±äº§å…šäº¡äºŽä½•æ—¶ï¼Ÿ</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/1/30/n12723183.md#1">ã€è§£å¯†æ—¶åˆ†ã€‘æ‡‚å¾—é¸Ÿè¯­ åŽ†å²ä¸ŠçœŸæœ‰è¿™æ ·çš„äºº</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/20/12/29/n12651261.md#1">è½®å›žè½¬ç”Ÿ å†¤å®¶å˜æˆæ¯å­</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/1/18/n12695507.md#1">ã€å‘½ç†ã€‘è¢«å†¤æž‰é™·å®³çš„å¥½äºº çš‡å¤©èƒ½ä¸ç®¡å—ï¼Ÿ</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/2/n12728948.md#1">ã€è§£å¯†æ—¶åˆ†ã€‘æ–¯é‡Œå…°å¡å‰æ€»ç»Ÿè½¬ä¸–å†œå®¶ç”·å­©</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/4/n12731595.md#1">æ—©ä¸Šèµ·åºŠåš1ä»¶äº‹ è¿œç¦»è¿‡æ•æ€§é¼»ç‚Ž</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/4/n12731708.md#1">ã€çè¨€çœŸè¯­ã€‘åçº¢åª’æ¸—é€ éƒ‘æ•¬åŸºåŠ å›½åˆ›æ¸¯äººç”µå°</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/3/n12731260.md#1">ã€è§£å¯†æ—¶åˆ†ã€‘24äº¿ç¾Žå…ƒ å²ä¸Šåå¤§æœ€è´µæˆ˜æœº</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/2/n12727425.md#1">æŽ¥å—å‘åž‹å¸ˆä¹‰å‰ª æµæµªæ±‰ç§’å˜ç»…å£«ç”·éœ‡æƒŠç½‘å‹</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/1/n12726784.md#1">ã€ç§¦é¹ç›´æ’­ã€‘ç¼…å†›æ–¹æŠ“æ˜‚å±±ç´ å­£ æ€¥åæ‹œç™»ä¹ è¿‘å¹³ï¼Ÿ</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/2/n12728478.md#1">ä¸­å…±å®˜åª’ç¾¤æ‰¹â€œåŽ•æ‰€é©å‘½â€æ‰“äº†è°çš„è„¸ï¼Ÿ</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/3/n12729203.md#1">é»Žå§¿æºä¸‰ä¸ªå¥³å„¿è¡Œå±± ç²‰ä¸æ„å¤–èšç„¦ä¸€åŒæ³¢éž‹</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/1/n12726330.md#1">51å²å‘¨ä¼ é›„ç™»é™†ç»¼ 22å²å­Ÿç¾Žå²å½“å¯¼å¸ˆå¼•ç‹‚æ‰¹</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/2/n12726845.md#1">é‡‘é©¬å½±åŽé©¬æ€çº¯ç–‘æ‚£æŠ‘éƒç—‡ åœå·¥åŠå¹´åŽé¦–å‘å£°</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/2/n12728875.md#1">èŽ·é™ˆå¤å¤¸èµžé˜³å…‰åˆæ¼‚äº® æ¨é¢–é»˜é»˜ç‚¹èµžè§†é¢‘è‡ªåŠ±</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/2/n12727150.md#1">ç«‹ç™¾ç—…æ¯’è‡´æ­»çŽ‡é«˜ ä¸“å®¶ç¤ºè­¦ä¸‹ä¸€åœºå¤§æµè¡Œå¨èƒ</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/1/n12726617.md#1">è¿™æ—¶å–æ°´æŽ’æ¯’å¿«ï¼æ—©æ™šå–å¯¹æ°´å…»ç”Ÿ è¿˜èƒ½æŽ§è¡€ç³–</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/2/n12727769.md#1">è‹±å†›æˆ˜æœºç©ºè¢­ä¼Šæ‹‰å…‹æ´žç©´ å‡†ç¡®æ­¼ç­ISæˆå‘˜</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/1/n12724829.md#1">ä¹Œå…‹å…°ç½‘çº¢æ¯å¤©ç©¿19ä¸–çºªæœè£… å¦‚å¤å…¸ç¾Žäºº</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/2/n12727507.md#1">2021å¹´2æœˆæ˜¯ä¸ªå®Œç¾ŽçŸ©å½¢ ä¼šæœ‰å¤§äº‹å‘ç”Ÿå—ï¼Ÿ</a></li>
+<hr>
+
+<strong>æœ¬æ–‡è½¬è‡ª<a href="https://www.epochtimes.com">å¤§çºªå…ƒ</a>ï¼ˆå›½å†…éœ€ç”¨<a href="https://github.com/yxhgbq3433/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æ‰èƒ½è®¿é—®ï¼‰</strong><p>ä¸‹è½½<a href="https://github.com/yxhgbq3433/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æµè§ˆåŽŸæ–‡ï¼š<a href="https://www.epochtimes.com/gb/19/8/9/n11442336.htm">è·Ÿè¿›å¥¥æ–¯å¡ï¼2019è‰¾ç¾Žå¥–ä¸»æŒäººä»Žç¼º</a></p><hr>
+
+<strong>æ‰‹æœºä¸Šé•¿æŒ‰å¹¶å¤åˆ¶ä¸‹é¢äºŒç»´ç åˆ†äº«æœ¬æ–‡ç« ï¼š</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/yxhgbq3433/djy/blob/master/gb/19/8/9/n11442336.md%231" title="åˆ†äº«æœ¬æ–‡ç« "></td><td VALIGN=TOP><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/wei-f1.jpg" title="ä¸­å…±çš„ä¼ªç«éª—å±€"  alt="ä¸­å…±çš„ä¼ªç«éª—å±€"></a><br><a href="https://github.com/yxhgbq3433/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/yong-h.jpg" title="æ°¸æ’çš„è§è¯"  alt="æ°¸æ’çš„è§è¯"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/shang-lnz.jpg" title="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"  alt="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/huo-z3.jpg" title="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"  alt="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/huo-z4.jpg" title="è¯äººæè¿°æ´»æ‘˜ææ€–"  alt="è¯äººæè¿°æ´»æ‘˜ææ€–"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/huo-z1.jpg" title="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"  alt="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/ma-ks.jpg" title="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"  alt="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/chang-zs.jpg" title="è—å­—çŸ³ è•´å¤©æœº"  alt="è—å­—çŸ³ è•´å¤©æœº"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/st1.jpg" title="å…³æ³¨3äº¿äººä¸‰é€€"  alt="å…³æ³¨3äº¿äººä¸‰é€€"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/jie-t.jpg" title="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"  alt="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/gao-zs.jpg" title="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"  alt="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/sj1.jpg" title="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"  alt="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/sj2.jpg" title="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"  alt="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/liangan.jpg" title="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"  alt="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/jia-ndzl.jpg" title="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"  alt="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/xiao-wd.jpg" title="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"  alt="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/yindu.jpg" title="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"  alt="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/xie-j.jpg" title="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"  alt="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/li-up.jpg" title="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"  alt="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/zfl2.jpg" title="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"  alt="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/zhen-h.jpg" title="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"  alt="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/dalu-sk.jpg" title="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"  alt="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/zfl1.jpg" title="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"  alt="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"></a><br><a href="https://github.com/yxhgbq3433/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/fq1.jpg" title="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"  alt="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"></a><br></td></tr></table>
